--- a/portfolio.html
+++ b/portfolio.html
@@ -79,11 +79,21 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <a class="portfolio-link" href=""
-                ><img
-                  src="./images/technocryak.jpg"
-                  class="portfolio-img"
-                  alt=""
-                />
+                ><div class="portfolio-link-thumb">
+                  <img
+                    src="./images/technocryak.jpg"
+                    class="portfolio-img"
+                    alt=""
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -92,7 +102,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href=""
-                ><img src="./images/poster.jpg" class="portfolio-img" alt="" />
+                ><div class="portfolio-link-thumb">
+                  <img src="./images/poster.jpg" class="portfolio-img" alt="" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">
                     Постер New Orlean vs Golden Star
@@ -103,11 +123,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./images/restaraunt.jpg"
-                  class="portfolio-img"
-                  alt=""
-                />
+                <div class="portfolio-link-thumb">
+                  <img
+                    src="./images/restaraunt.jpg"
+                    class="portfolio-img"
+                    alt=""
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -116,7 +146,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./images/prime.jpg" class="portfolio-img" alt="" />
+                <div class="portfolio-link-thumb">
+                  <img src="./images/prime.jpg" class="portfolio-img" alt="" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">Проєкт Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -125,7 +165,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./images/boxes.jpg" class="portfolio-img" alt="" />
+                <div class="portfolio-link-thumb">
+                  <img src="./images/boxes.jpg" class="portfolio-img" alt="" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">Проєкт Boxes</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -134,11 +184,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img
-                  src="./images/inspiration.jpg"
-                  class="portfolio-img"
-                  alt=""
-                />
+                <div class="portfolio-link-thumb">
+                  <img
+                    src="./images/inspiration.jpg"
+                    class="portfolio-img"
+                    alt=""
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -147,7 +207,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./images/book.jpg" class="portfolio-img" alt="" />
+                <div class="portfolio-link-thumb">
+                  <img src="./images/book.jpg" class="portfolio-img" alt="" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">Видання Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -156,7 +226,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./images/lab.jpg" class="portfolio-img" alt="" />
+                <div class="portfolio-link-thumb">
+                  <img src="./images/lab.jpg" class="portfolio-img" alt="" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">Проєкт LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -165,7 +245,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./images/business.jpg" class="portfolio-img" alt="" />
+                <div class="portfolio-link-thumb">
+                  <img
+                    src="./images/business.jpg"
+                    class="portfolio-img"
+                    alt=""
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-text-container">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
