--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul class="header-address">
           <li class="header-address-item">
             <a href="mailto:info@devstudio.com" class="header-address-link"
-              ><svg width="16px" height="12px">
+              ><svg class="icon" width="16px" height="12px">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -45,7 +45,7 @@
           </li>
           <li class="header-address-item">
             <a href="tel:+380961111111" class="header-address-link"
-              ><svg width="10px" height="16px">
+              ><svg class="icon" width="10px" height="16px">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -126,27 +126,45 @@
           <ul class="projects-list">
             <li class="projects-item">
               <a href=""
-                ><img
-                  src="./images/box1.jpg"
-                  alt="Процесс написання коду"
-                  width="370"
-              /></a>
+                ><div class="thumb">
+                  <img
+                    src="./images/box1.jpg"
+                    alt="Процесс написання коду"
+                    width="370"
+                  />
+                  <div class="projects-thumb">
+                    <p class="projects-thumb-text">Десктопні додатки</p>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="projects-item">
               <a href=""
-                ><img
-                  src="./images/box2.jpg"
-                  alt="Робота з ноутбуком та смартфоном"
-                  width="370"
-              /></a>
+                ><div class="thumb">
+                  <img
+                    src="./images/box2.jpg"
+                    alt="Робота з ноутбуком та смартфоном"
+                    width="370"
+                  />
+                  <div class="projects-thumb">
+                    <p class="projects-thumb-text">Мобільні додатки</p>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="projects-item">
               <a href=""
-                ><img
-                  src="./images/box3.jpg"
-                  alt="Веб-дизайнер вибирає колір на графічному планшеті"
-                  width="370"
-              /></a>
+                ><div class="thumb">
+                  <img
+                    src="./images/box3.jpg"
+                    alt="Веб-дизайнер вибирає колір на графічному планшеті"
+                    width="370"
+                  />
+                  <div class="projects-thumb">
+                    <p class="projects-thumb-text">Дизайнерські рішення</p>
+                  </div>
+                </div></a
+              >
             </li>
           </ul>
         </div>
